--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@ name = "hypnotica-v4"
 version = "0.1.0"
 description = "A prototype game"
 authors = [
-    {name = "zolenikokolozassi@gmail.com"}
+    {name = "Zoléni Kokolo Zassi",email = "zolenikokolozassi@gmail.com"}
 ]
 readme = "README.md"
-requires-python = "^3.10"
+requires-python = ">=3.12"
 dependencies = [
     "pygame (>=2.6.1,<3.0.0)"
 ]
