--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "pygame (>=2.6.1,<3.0.0)"
+    "pygame-ce (>=2.5.5,<3.0.0)"
 ]
 
 
